// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortList component renders correctly with closed class 1`] = `
<ul
  className="places__options places__options--custom "
>
  <li
    className="places__option places__option--active"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Popular
  </li>
  <li
    className="places__option "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Price: low to high
  </li>
  <li
    className="places__option "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Price: high to low
  </li>
  <li
    className="places__option "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Top rated first
  </li>
</ul>
`;

exports[`SortList component renders correctly with opened class 1`] = `
<ul
  className="places__options places__options--custom places__options--opened"
>
  <li
    className="places__option places__option--active"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Popular
  </li>
  <li
    className="places__option "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Price: low to high
  </li>
  <li
    className="places__option "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Price: high to low
  </li>
  <li
    className="places__option "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    Top rated first
  </li>
</ul>
`;
